@startuml ClassDiagram
skinparam defaultTextAlignment center
skinparam nodesep 0
allowmixing


package "RealStereo.Config" as Config {
  class Configuration {
    + string SelectedRoom
    + {static} Configuration GetInstance()
    + Dictionary<string, List<PointConfiguration>> GetRooms()
  }

  class ConfigurationManager {
    - ConfigurationStep[] steps
    + void Start()
    + void NextStep()
    + void NextPosition()
    + void Cancel()
    + void SetInstructions(string instruction)
    + void SetError(string error)
    + void SetAudioInputDeviceVolume(float volume)
    + List<PointConfiguration> GetConfigurations()
    + void Terminate()
    + bool IsTerminated()
  }

  class PointConfiguration {
    + Point Coordinates
    + Dictionary<int, float[]> Volumes
  }
}

package "RealStereo.Config.Steps" as Steps {
  interface ConfigurationStep {
    + void Start()
    + PointConfiguration Finish(PointConfiguration currentConfiguration)
    + void Cancel()
  }

  class ConfigurationStepCamera implements ConfigurationStep {
    - {static} int MoveThreshold = 60
    - {static} int StandStillTime = 3
    - void ResultReady(object sender, ResultReadyEventArgs e)
    - bool DidMove(Point coordinates)
  }

  class ConfigurationStepSpeaker implements ConfigurationStep {
    - {static} int TestToneLength = 2
    - {static} int TestToneScalingTarget = 0.5f
    - void TestToneStopped(object sender, StoppedEventArgs e)
    - void MuteAllChannels()
  }
}

ConfigurationManager *-- ConfigurationStep: uses >
PointConfiguration "*" -- ConfigurationManager: generates <
Configuration -- "*" PointConfiguration: stores >

@enduml
